solc_mutator_ossfuzz_seed_corpus/test_sol/test_6b39770142c6d4466fb201f6acdc198006b2162f890aa99a7145d9960c6e3ae2_d5bab443b587c2843f6ecfc0fa9cfe8974b497ed_sol.sol
==== Source:  ====

==== Source: su0.sol ====
function f0(bytes memory i0,bool i1)  returns(address o0,function () external o1)
{
}
function f1(bool i0)  returns(int64 o0,int96 o1,bytes32 o2)
{

  {


o1 *= (22237029823503305010810649890 / 25372155949620849905782380010);



{
}
  }

  {
{
  (address l0, function () external l1) = f0("2e147e8edb3b998bc80af985cc01cf8867be8c67cbb6017102b7",(true || false));

}


  }

}
pragma abicoder v2;
pragma solidity >= 0.0.0;
// ----
// TypeError 7366: (su0.sol:159-228): Operator *= not compatible with types int96 and rational_const 2223702982350330501081064989 / 2537215594962084990578238001
